# yadro-test-2025

./: Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  run.py
app/: __init__.py  app.py  models.py  routes.py
app/templates/: base.html  index.html  user_details.html
app/templates/components/: address_card.html  contacts_card.html  dates_card.html  documents_card.html  load_api_form.html  login_info_card.html  navbar.html  pagination.html  user_name_card.html  user_table_row.html
app/utils/: api_client.py  load_service.py  parser.py  persister.py
tests/: conftest.py  test_api_load.py  test_user_details.py  test_users_list.py
tests/utils/: assertations.py  detail_fields.py  random_user.py  user_json.py
