[tool.poetry]
name = "user-registry"
version = "0.1.0"
description = ""
authors = ["Zandari <kirillgluhih1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"
bootstrap-flask = "^2.5.0"
peewee = "^3.18.1"
requests = "^2.32.3"
pytest = "^8.3.5"
psycopg2-binary = "^2.9.10"
faker = "^37.3.0"
lxml = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
